# fastapi-docker-lambda

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
